made some progress with AI, but async with rendering is screwed. need heavy refactoring.

--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <body>
         <script src="node_modules/deck-of-cards/dist/deck.min.js"></script>
         
+        <div id="scoreboard"></div>
+
         <div id="container"></div>
 
         <script src="big2logic.js"></script>
+        <script src="big2AI.js"></script>
         <script src="big2class.js"></script>
         <script src="index.js"></script>]
     </body>
