implemenetd 2-way play for pairs

--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 
         <div id="container"></div>
 
-        <script src="big2logic.js"></script>
-        <script src="big2AI.js"></script>
-        <script src="big2class.js"></script>
+        <script src="Big2Logic.js"></script>
+        <script src="Big2Player.js"></script>
+        <script src="Big2Hand.js"></script>
+        <script src="Big2AI.js"></script>
+        <script src="Big2Game.js"></script>
         <script src="index.js"></script>]
     </body>
 </html>
