2-way gameplay working for player PASS and AI PASS

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body>
         <script src="node_modules/deck-of-cards/dist/deck.min.js"></script>
         
-        <div id="scoreboard"></div>
+        <div id="scoreboard">Welcome to Big 2!</div>
 
         <div id="container"></div>
 
