Refactor- clean code

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <body>
         <script src="node_modules/deck-of-cards/dist/deck.min.js"></script>
         
-        <div id="scoreboard">Welcome to Big 2!</div>
+        <div id="message">Welcome to Big 2! (LMB: select, Enter: play, P: pass, S: sort)</div>
+        Your Score: <span id="your-score">0</span><br>
+        AI Score: <span id="ai-score">0</span>
 
         <div id="container"></div>
 
@@ -15,6 +17,6 @@
         <script src="Big2Hand.js"></script>
         <script src="Big2AI.js"></script>
         <script src="Big2Game.js"></script>
-        <script src="index.js"></script>]
+        <script src="index.js"></script>
     </body>
 </html>
