--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <title>Cards</title>
         <link rel="stylesheet" href="node_modules/deck-of-cards/example/example.css">
+        <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     </head>
     <body>
         <script src="node_modules/deck-of-cards/dist/deck.min.js"></script>
