Implement toggle AI card visibility

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <!--<script src="node_modules/deck-of-cards/dist/deck.min.js"></script>-->
         <script src="deck.min.js"></script>
 
-        <div id="message">Welcome to Big 2! (LMB: select, Enter: play, P: pass, S: sort)</div>
+        <div id="message">Welcome to Big 2! (LMB: select, Enter: play, P: pass, S: sort, T: toggle AI card visibility)</div>
         Your Score: <span id="your-score">0</span><br>
         AI Score: <span id="ai-score">0</span>
 
